metadata/root/main/default/objects/Case/fields/Test_picklist__c.field-meta.xml
<CustomField>
    <fullName>Test_picklist__c</fullName>
    <label>Test_picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>