metadata/root/main/default/objects/Case/fields/TestPickList__c.field-meta.xml
<CustomField>
    <fullName>TestPickList__c</fullName>
    <label>TestPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>