metadata/root/main/default/objects/Case/fields/TestURLCase__c.field-meta.xml
<CustomField>
    <fullName>TestURLCase__c</fullName>
    <label>TestURLCase</label>
    <type>Url</type>
</CustomField>