metadata/root/main/default/objects/Case/validationRules/TestCasevalidationrule.validationRule-meta.xml
<ValidationRule>
    <fullName>TestCasevalidationrule</fullName>
    <active>true</active>
    <errorConditionFormula>Description = &apos;Hello&apos;</errorConditionFormula>
    <errorMessage>erry</errorMessage>
</ValidationRule>